--- a/app/src/main/res/layout/activity_magic_dictionary.xml
+++ b/app/src/main/res/layout/activity_magic_dictionary.xml
@@ -3,9 +3,15 @@
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MagicDictionary">
+    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MagicDictionary"
+    android:background="#ff000000">
 
     <TextView android:text="@string/title" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:textColor="#ff23a029"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
 </RelativeLayout>
