--- a/app/src/main/res/layout/activity_magic_dictionary.xml
+++ b/app/src/main/res/layout/activity_magic_dictionary.xml
@@ -3,15 +3,78 @@
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MagicDictionary"
+    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
+    android:backgroundTint="#ff000000"
     android:background="#ff000000">
 
-    <TextView android:text="@string/title" android:layout_width="wrap_content"
+    <TextView
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="#ff23a029"
+        android:id="@+id/macroName"
+        android:textColor="#ff1eaf1d"
+        android:textSize="@dimen/abc_action_button_min_width_material"
+        android:fontFamily="Courier New"
+        android:password="false"
+        android:singleLine="false"
+        android:phoneNumber="false"
+        android:focusableInTouchMode="true"
+        android:layout_gravity="center"
+        android:textAlignment="center"
+        android:text="@string/macroName"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/object"
+        android:textColor="#ff1eaf1d"
+        android:textSize="@dimen/abc_action_button_min_width_material"
+        android:fontFamily="Courier New"
+        android:password="false"
+        android:singleLine="false"
+        android:phoneNumber="false"
+        android:focusableInTouchMode="true"
+        android:layout_gravity="center"
+        android:textAlignment="center"
+        android:text="@string/object"
+        android:layout_below="@+id/macroName"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/description"
+        android:textColor="#ff1eaf1d"
+        android:textSize="@dimen/abc_action_button_min_width_material"
+        android:fontFamily="Courier New"
+        android:password="false"
+        android:singleLine="false"
+        android:phoneNumber="false"
+        android:focusableInTouchMode="true"
+        android:layout_gravity="center"
+        android:textAlignment="center"
+        android:text="@string/description"
+        android:layout_below="@+id/object"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:layout_above="@+id/search" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="loadMacroListView"
+        android:text="@string/search_button_name"
+        android:id="@+id/search"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:minHeight="60dp"
+        android:minWidth="120dp" />
 
 </RelativeLayout>
