--- a/app/src/main/res/layout/activity_magic_dictionary.xml
+++ b/app/src/main/res/layout/activity_magic_dictionary.xml
@@ -10,7 +10,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/macroName"
+        android:id="@+id/macroNameText"
         android:textColor="#ff1eaf1d"
         android:textSize="@dimen/abc_action_button_min_width_material"
         android:fontFamily="Courier New"
@@ -30,7 +30,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/object"
+        android:id="@+id/objectText"
         android:textColor="#ff1eaf1d"
         android:textSize="@dimen/abc_action_button_min_width_material"
         android:fontFamily="Courier New"
@@ -41,14 +41,16 @@
         android:layout_gravity="center"
         android:textAlignment="center"
         android:text="@string/object"
-        android:layout_below="@+id/macroName"
+        android:layout_below="@+id/macroNameText"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/description"
+        android:id="@+id/descriptionText"
         android:textColor="#ff1eaf1d"
         android:textSize="@dimen/abc_action_button_min_width_material"
         android:fontFamily="Courier New"
@@ -59,12 +61,12 @@
         android:layout_gravity="center"
         android:textAlignment="center"
         android:text="@string/description"
-        android:layout_below="@+id/object"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
+        android:layout_below="@+id/objectText"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_above="@+id/search" />
+        android:layout_above="@+id/search"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
 
     <Button
         android:layout_width="wrap_content"
